# ADSREchoVST

./: .clang-format  .gitattributes  .gitignore  ADSREcho.jucer  ARCHITECTURE.md  ASDREcho.jucer  CMakeLists.txt  README.md
.github/: CICD.md
.github/workflows/: ci.yml  ml-training.yml  release.yml
ADSREcho/: ADSREcho.jucer
ADSREcho/JuceLibraryCode/: JucePluginDefines.h
ADSREcho/Source/: Main.cpp
JuceLibraryCode/: BinaryData.h  JuceHeader.h  JucePluginDefines.h
Source/: BaseModuleSlotEditor.cpp  BaseModuleSlotEditor.h  BasicCompressor.cpp  BasicCompressor.h  BasicDelay.cpp  BasicDelay.h  BasicEQ.cpp  BasicEQ.h  Clookandfeel.cpp  Clookandfeel.h  Compressor.cpp  Compressor.h  CompressorDisplayComponent.cpp  CompressorDisplayComponent.h  CompressorModule.cpp  CompressorModule.h  CompressorModuleSlotEditor.cpp  CompressorModuleSlotEditor.h  CompressorPanel.cpp  CompressorPanel.h  CompressorProcessor.cpp  CompressorProcessor.h  Convolution.cpp  Convolution.h  ConvolutionModule.cpp  ConvolutionModule.h  ConvolutionPanel.h  ConvolutionProcessor.cpp  ConvolutionProcessor.h  Convolve.cpp  Convolve.h  CustomDelays.cpp  CustomDelays.h  DatorroHall.cpp  DatorroHall.h  DatorroModule.cpp  DatorroModule.h  DelayModule.cpp  DelayModule.h  DelayPanel.cpp  (+53 more)
Source/fftconvolver/: AudioFFT.h  FFTConvolver.cpp  FFTConvolver.h  TwoStageFFTConvolver.cpp  TwoStageFFTConvolver.h  Utilities.cpp  Utilities.h
Tests/: CMakeLists.txt  DSPTests.cpp  PluginBasicTests.cpp
installer/macos/: build_pkg.sh
installer/windows/: installer.iss
patches/: juce-xcode15-iterator-fix.patch
